--- a/package.json
+++ b/package.json
@@ -9,17 +9,41 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dompurify": "^3.0.8",
+    "framer-motion": "^10.16.4",
+    "jsdom": "^22.1.0",
+    "leaflet": "^1.9.4",
+    "net": "^1.0.2",
+    "next": "latest",
+    "nodemailer": "^6.9.8",
+    "pathseg": "^1.2.1",
     "react": "latest",
+    "react-countup": "^6.4.2",
     "react-dom": "latest",
-    "next": "latest"
+    "react-icon-cloud": "^4.1.4",
+    "react-icons": "^4.11.0",
+    "react-leaflet": "^4.2.1",
+    "react-tagcloud": "^2.3.1",
+    "react-tsparticles": "^2.12.2",
+    "react-type-animation": "^3.1.0",
+    "swiper": "^10.3.1",
+    "TagCloud": "^2.4.0",
+    "tailwind-scrollbar": "^3.0.5",
+    "tsparticles": "^2.12.0",
+    "tsparticles-path-polygon": "^2.12.0"
   },
   "devDependencies": {
-    "typescript": "latest",
-    "@types/react": "latest",
+    "@types/dompurify": "^3.0.5",
+    "@types/leaflet": "^1.9.6",
     "@types/node": "latest",
+    "@types/nodemailer": "^6.4.14",
+    "@types/react": "latest",
     "@types/react-dom": "latest",
+    "@types/react-leaflet": "^3.0.0",
+    "@types/react-tagcloud": "^1.1.9",
     "autoprefixer": "latest",
-    "postcss": "latest",
-    "tailwindcss": "latest"
+    "postcss": "^8.4.31",
+    "tailwindcss": "latest",
+    "typescript": "latest"
   }
 }
