--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.10.5",
     "dompurify": "^3.0.8",
     "framer-motion": "^10.16.4",
     "jsdom": "^22.1.0",
@@ -16,6 +17,7 @@
     "net": "^1.0.2",
     "next": "latest",
     "nodemailer": "^6.9.8",
+    "openai": "^4.83.0",
     "pathseg": "^1.2.1",
     "react": "latest",
     "react-countup": "^6.4.2",
