--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^10.16.4",
     "jsdom": "^22.1.0",
     "leaflet": "^1.9.4",
+    "lodash": "^4.17.21",
     "net": "^1.0.2",
     "next": "latest",
     "nodemailer": "^6.9.8",
