--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@chakra-ui/react": "^2.10.5",
     "clsx": "^2.1.1",
+    "crypto": "^1.0.1",
     "dompurify": "^3.0.8",
     "firebase-admin": "^13.4.0",
     "framer-motion": "^10.16.4",
