--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
     "dompurify": "^3.2.6",
+    "firebase": "^11.9.1",
     "firebase-admin": "^13.4.0",
     "framer-motion": "^10.16.4",
     "jsdom": "^22.1.0",
@@ -33,6 +34,7 @@
     "react-tsparticles": "^2.12.2",
     "react-type-animation": "^3.1.0",
     "swiper": "^10.3.1",
+    "swr": "^2.3.3",
     "tailwind-scrollbar": "^3.0.5",
     "tsparticles": "^2.12.0",
     "tsparticles-path-polygon": "^2.12.0"
